SERVER-11280 fix detecting downed replica nodes to check against a copy of the member with up to date lastHeartbeatRecv

also pass node id as well as node name in the heartbeat