jstests/replsets/majority.js
@@ -59,6 +59,12 @@ config.version = 2;
 config.members.pop();
 config.members.pop();
 
+// wait for nodes 3 and 4 to come back as arbiters
+assert.soon(function() {
+    var status = master.getDB("admin").runCommand({replSetGetStatus:1});
+    return status.members[3].state == 7 && status.members[4].state == 7;
+});
+
 try {
     master.getDB("admin").runCommand({replSetReconfig : config});
 }
